--- a/.github/workflows/development.yaml
+++ b/.github/workflows/development.yaml
@@ -123,3 +123,25 @@ jobs:
         with:
           push: true
           tags: datajoint/sci-viz:${{env.DJSCIVIZ_VERSION}}
+  npm-package:
+    # if: |
+    #   github.event_name == 'push' &&
+    #   startsWith(github.ref, 'refs/tags') &&
+    #   (
+    #     github.repository_owner == 'datajoint' ||
+    #     github.repository_owner == 'datajoint-company'
+    #   )
+    # needs: publish-release
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - name: Install dependencies
+        run: yarn install
+      - name: Build dist
+        run: yarn rollup -c
+      - name: Copy package.json
+        run: cp ./package.json ./dist
+      - name: Package Dist
+        run: |
+          cd ./dist
+          yarn pack
