--- a/.github/workflows/development.yaml
+++ b/.github/workflows/development.yaml
@@ -138,16 +138,16 @@ jobs:
       - uses: actions/setup-node@v2
         with:
           node-version: 16.19.0
-      - name: Check versions
-        run: |
-          node -v
-          yarn -v
       - name: Install dependencies
-        run: yarn install
+        run: |
+          yarn install
+          ls -la
       - name: Build dist
         env:
           NODE_OPTIONS: "--max_old_space_size=4096"
-        run: yarn rollup -c
+        run: |
+          ls -la
+          yarn rollup -c
       - name: Copy package.json
         run: cp ./package.json ./dist
       - name: Package Dist
